fix inline-block navigation spacing issue

--- a/wp-content/themes/wptemple/sass/_navigation.scss
+++ b/wp-content/themes/wptemple/sass/_navigation.scss
@@ -11,8 +11,9 @@
   margin-top: 0;
 
 	.menu-item {
-		display: inline-block;
+		display: block;
 		text-align: left;
+    float: left;
 	}
 
 	a {
